# cmake-template

./: CMakeLists.template  CMakeLists.txt.template  README.md  bootstrap.sh
example/: Dockerfile
example/cpp/: CMakeLists.txt
example/cpp/cmake_modules/: ConfigureArrow.cmake  FindArrow.cmake  ThirdPartyToolChain.cmake
example/cpp/src/arrow-example/: CMakeLists.txt  example.cc
example/cpp/src/arrow-example/sources/: test.csv
example/cpp/src/clang-tidy/: CMakeLists.txt  README.md  test.cc  test.h
example/cpp/src/module/: test.cc
example/cpp/src/module/test/: CMakeLists.txt  gtest_test.cc
example/cpp/src/test-module/: CMakeLists.txt  test.cc  test.h
example/cpp/src/test-module/test/: gtest_test.cc
script/: CMakeLists.txt.template  Dockerfile
